fix: in mobile phone some content are covered with browser nav

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -45,6 +45,9 @@
   box-sizing: border-box;
   /* background-color: hwb(120 30% 0% / 0.5); */
 }
+html {
+  height: 100%;
+}
 
 body {
   background: #fcfdfd;
